--- a/.github/workflows/BuildIpAddInfo.yml
+++ b/.github/workflows/BuildIpAddInfo.yml
@@ -7,5 +7,5 @@ jobs:
   BuildIpAddInfo:
     runs-on: ubuntu-latest
     steps:
-      - run:  bash ./ipAddInfo.sh
+      - run:  bash ip-add-info/ipAddInfo.sh
       
