--- a/.github/workflows/BuildIpAddInfo.yml
+++ b/.github/workflows/BuildIpAddInfo.yml
@@ -7,5 +7,12 @@ jobs:
   BuildIpAddInfo:
     runs-on: ubuntu-latest
     steps:
-      - run:  bash ./ipAddInfo.sh
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Run Super-Linter
+        uses: github/super-linter@v3
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
